--- a/templates/assessment-catalog-item-start.html
+++ b/templates/assessment-catalog-item-start.html
@@ -2,7 +2,7 @@
 {% load bootstrap3 %}
 
 {% block title %}
-{{module.title}} - Assessment Catalog
+{{app.title}} - Assessment Catalog
 {% endblock %}
 
 {% block head %}
@@ -19,14 +19,14 @@
 
 {% block breadcrumbs %}
 <li class="active"><a href="/assessment-catalog">Assessment Catalog</a></li>
-<li class="active">{{module.title|truncatewords:6}}</li>
+<li class="active">{{app.title|truncatewords:6}}</li>
 {% endblock %}
 
 {% block body %}
-<h1>{{module.title}}</h1>
+<h1>{{app.title}}</h1>
 
 <div class="body">
-  {{module.short_description|safe}}
+  {{app.description.short|safe}}
 </div>
 
 <form role="form" method="post">
