module-type questions how have a "protocol" field which picks out apps that can answer that question
* the question "protocol" string must match a "protocol" string at the top-level of the app's project definition
* when the app is instantiated into a Project, the Project's root Task becomes an answer to the question that the user started at
* add a redirect when trying to access a Task that is the root task of a Project so that links to the answer continue to work, since the answer is a Project and not merely a Task
* since Projects now can be contained within other Projects (via Task answers), add levels of hierarchy to the breadcrumbs
* allow module/module-set questions to not have a module-id if they have a protocol
* new validation in Task.get_or_create_subtask and module loading

We might want to refactor this so that the app doesn't turn into a Project at all but just a task, but we don't have a UI for it then because project.html only works for projects and not tasks.

--- a/templates/assessment-catalog.html
+++ b/templates/assessment-catalog.html
@@ -54,7 +54,7 @@ Assessment Catalog
     <div class="col-sm-4">
       <div class="assessment"
         data-assessment="{{app.key}}"
-        onclick="window.location='/assessment-catalog/{{app.key|urlencode}}'"">
+        onclick="window.location='/assessment-catalog/{{app.key|urlencode}}{{forward_qsargs}}'"">
         <h2><small>{{app.vendor}}</small><br/>{{app.title}}</h2>
         <div class="body">
           {{app.description.short|safe}}
@@ -73,6 +73,11 @@ Assessment Catalog
       <div class="visible-md clearfix"> </div>
       <div class="visible-lg clearfix"> </div>
     {% endif %}
+
+  {% empty %}
+    <div class="col-sm-12">
+      <p>There are currently no apps available that can be used to complete that question, sorry!</p>
+    </div>
   {% endfor %}
 </div>
 {% endblock %}
